package model.carte;

public class Weapon extends Card {

}
