package model.enums;

/**
 * The Effect type of the effect
 */
public enum EffectType {
    /**
     * TODO X ELENINA: piccola javadoc che spiega brevemente la differenza tra gli effectType, thank you
     */
    BASIC(1),
    OPTIONAL(2),
    OPTIONAL1(3),
    OPTIONAL2(4),
    ALTERNATIVE(5),
    BEFORE_AFTER_BASIC(6),
    OPTIONAL_VORTEX(7),
    BEFORE_BASIC(8),
    EVERY_TIME(9);

    EffectType(int number){
    }
}
